modified all paginate endpoints